--- a/pom.xml
+++ b/pom.xml
@@ -56,11 +56,16 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-  <groupId>io.github.cdimascio</groupId>
-  <artifactId>dotenv-java</artifactId>
-  <version>3.0.0</version>
+ 	 <groupId>io.github.cdimascio</groupId>
+  	<artifactId>dotenv-java</artifactId>
+  	<version>3.0.0</version>
 </dependency>
-
+	<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.34</version>
+    <scope>provided</scope>
+</dependency>
 	</dependencies>
 
 	<build>
