--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=mymenu
 spring.datasource.url=jdbc:postgresql://localhost:5432/mymenu
 spring.datasource.username=postgres
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.password=Euge1488
 
 server.port=3001
 
